apps/home/actual/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: actual
spec: {}
status: {}
