apps/home/actual/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: actual
  namespace: actual
spec:
  type: ClusterIP
  selector:
    app: actual
  ports:
    - name: http
      port: 5006
