apps/home/actual/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actual-traefik
  namespace: actual
  annotations:
    spec.ingressClassName: actual
spec:
  rules:
    - http:
        paths:
          - path: /actual
            pathType: Prefix
            backend:
              service:
                name: actual
                port:
                  name: http
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: actual-tailscale
#   namespace: actual
# spec:
#   ingressClassName: tailscale
#   rules:
#     - http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: actual
#                 port:
#                   number: 5006
#   tls:
#     - hosts:
#         - actual.deer-truck.ts.net
